# hedera_brevetchain

./: README
backend/: .env  Cargo.toml
backend/migrations/: 20250830183936_table.sql
backend/src/: ai_client.rs  hedera_client.rs  main.rs  models.rs  routes.rs
backend/src/account/: create_topic.rs  evm_address.rs
frontend/: index.html  script.js  style.css
ia/: ai.py  api.py  pyproject.toml
