[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
thiserror = "2.0.16"
hedera = "0.40.0"
hex = "0.4.3"
sha2 = {version="0.10.6"}
rustc-hex = "2.1.0"
anyhow = "1.0.99"


[[bin]]
name = "create_topic"
path = "src/account/create_topic.rs"


[[bin]]
name = "evm_address"
path = "src/account/evm_address.rs"
