[tool.poetry]
name = "brevet_form"
version = "0.1.0"
description = "ia  who form  brevet"
authors = ["rustnew <martialwato50@gmail.com>"]
license = "mit"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = {version = "0.24.0", extras = ["standard"]}
python-multipart = "0.0.6"
pydantic = "2.5.0"
transformers = "4.35.0"
torch = "2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
